--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <Spinner
-        android:id="@+id/LanSpinner"
+        android:id="@+id/lanSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:entries="@array/lanSpinner"
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/LanBut"
+        android:id="@+id/lanBut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/change"
@@ -25,6 +25,6 @@
         tools:layout_editor_absoluteY="123dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/LanSpinner"
+        app:layout_constraintTop_toBottomOf="@id/lanSpinner"
         app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
