--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimaryGreen">#2E8B57</color>
+    <color name="colorPrimaryDarkGreen">#006400</color>
+    <color name="colorAccentGreen">#6B8E23</color>
+    <color name="colorPrimaryDarkGrey">#353636</color>
+    <color name="colorPrimaryBlack">#080908</color>
+    <color name="colorAccentBlack">#2B2929</color>
+    <color name="colorPrimaryBlue">#16587E</color>
+    <color name="colorPrimaryDarkBlue">#001C64</color>
+    <color name="colorAccentBlue">#3F51B5</color>
 </resources>
