--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,22 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ThemeGreen" parent="AppTheme">
+        <item name="colorPrimary">@color/colorPrimaryGreen</item>
+        <item name="colorButtonNormal">@color/colorPrimaryDarkGreen</item>
+        <item name="android:textColor">@color/colorPrimaryGreen</item>
+        <item name="colorAccent">@color/colorAccentGreen</item>
+    </style>
+    <style name="ThemeBlack" parent="AppTheme">
+        <item name="colorPrimary">@color/colorPrimaryDarkGrey</item>
+        <item name="colorButtonNormal">@color/colorPrimaryBlack</item>
+        <item name="android:textColor">@color/colorPrimaryDarkGrey</item>
+        <item name="colorAccent">@color/colorAccentBlack</item>
+    </style>
+    <style name="ThemeBlue" parent="AppTheme">
+        <item name="colorPrimary">@color/colorPrimaryBlue</item>
+        <item name="colorButtonNormal">@color/colorPrimaryDarkBlue</item>
+        <item name="android:textColor">@color/colorPrimaryBlue</item>
+        <item name="colorAccent">@color/colorAccentBlue</item>
+    </style>
 </resources>
